--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -34,7 +34,8 @@ In fact, **we can find the kinetic energy of a charge** using our kinetic energy
 
 We know that, based on the work-kinetic energy theorem, $W = \Delta K$. We also know that $W = \int_{x_{i}}^{x_{f}} f(x)dx$, or Work = Force $\times$ Distance. Lastly, we know that $F_{e} = qE$. If we multiply both sides of the equation by $\Delta x$, we get $F_{e}\Delta x = qE\Delta x$. Therefore $W = qE\Delta x$, and since $W = \Delta K$, that means $\Delta K = qE\Delta x$
 
-:::
+
+<!-- todo: add key equations here (kinematics, work, energy) -->
 
 Remember: **the force caused by an electric field is just another force**. **The laws of mechanics still apply** and can be used in electricity and magnetism. As an example, below is a walkthrough of a question regarding the motion of a charged particle.
 
