--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -18,6 +18,16 @@ We know that $\mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$, or $q\mathbf{E} = m\mat
 
 $\mathbf{a} = \frac{q\mathbf{E}}{m}$
 
+:::note
+
+If the charge is negative, then you will have the following acceleration equation:
+
+$\mathbf{a} = -\frac{e\mathbf{E}}{m}$
+
+In this case $e$ is an electron, which has a negative charge.
+
+:::
+
 Our original kinematic equations are as follows:
 
 - $\Delta x = v_{i}t + \frac{1}{2}at^{2}$
@@ -26,16 +36,29 @@ Our original kinematic equations are as follows:
 
 All we need to do is plug in our value for $\mathbf{a}$ into those equations:
 
+:::tip[Key Equation]
+
 - $\Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
 - $v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
 - $v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
 
+$q$ is the charge and $\mathbf{E}$ is the electric field. $m$ is mass of the charge (some textbooks write it as $m_{e}$. All other variables are the same but in terms of an charged particle. For example, the velocity is the velocity of the charged particle.
+
+:::
+
 In fact, **we can find the kinetic energy of a charge** using our kinetic energy equations.
 
-We know that, based on the work-kinetic energy theorem, $W = \Delta K$. We also know that $W = \int_{x_{i}}^{x_{f}} f(x)dx$, or Work = Force $\times$ Distance. Lastly, we know that $F_{e} = qE$. If we multiply both sides of the equation by $\Delta x$, we get $F_{e}\Delta x = qE\Delta x$. Therefore $W = qE\Delta x$, and since $W = \Delta K$, that means $\Delta K = qE\Delta x$
+We know that, based on the work-kinetic energy theorem, $W = \Delta K$. We also know that $W = \int_{x_{i}}^{x_{f}} f(x)dx$, or Work = Force $\times$ Distance. Lastly, we know that $F_{e} = qE$. If we multiply both sides of the equation by $\Delta x$, we get $F_{e}\Delta x = qE\Delta x$. Therefore $W = q\mathbf{E}\Delta x$, and since $W = \Delta K$, that means $\Delta K = q\mathbf{E}\Delta x$.
 
+:::tip[Key Equation]
 
-<!-- todo: add key equations here (kinematics, work, energy) -->
+- $W = q\mathbf{E}\Delta x$
+- $\Delta K = q\mathbf{E}\Delta x$
+
+Just like the previous key equations, $q$ is the charge and $E$ is the electric field.
+
+:::
+
 
 Remember: **the force caused by an electric field is just another force**. **The laws of mechanics still apply** and can be used in electricity and magnetism. As an example, below is a walkthrough of a question regarding the motion of a charged particle.
 
@@ -70,4 +93,21 @@ This video contains the basics of some motion calculations which may be done und
 
 **8.5.1**
 
-*
+- [Article about the motion of a charged particle in a field](https://phys.libretexts.org/Courses/Kettering_University/Electricity_and_Magnetism_with_Applications_to_Amateur_Radio_and_Wireless_Technology/02%3A_The_Electric_Field/2.08%3A_Motion_of_a_Charged_Particle_in_an_Electric_Field)
+
+## Equations and Constants
+
+- $\Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
+- $v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
+- $v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
+
+<br></br>
+
+- $W = q\mathbf{E}\Delta x$
+- $\Delta K = q\mathbf{E}\Delta x$
+
+<br></br>
+
+- $q$ = the charge
+- $\mathbf{E}$ = the electric field
+- $m$ = the mass of the charge (sometimes listed as $m_{e}$)
