--- a/docs/Unit-8/8.6-gauss.md
+++ b/docs/Unit-8/8.6-gauss.md
@@ -6,7 +6,7 @@ sidebar_position: 6
 
 ## 8.6.1 - Flux
 
-Earlier we learned about electric fields and their interactions with objects. However, we have not yet covered the idea of an electric field passing through a surface. By definition, the meaning of flux is flow. A measurement of flux is a measurement of flow. To better understand the idea of electric flux, we must understand flux itself first.
+Earlier we learned about electric fields and their interactions with objects. However, we have not yet covered the idea of an electric field passing through a surface. By definition, the meaning of flux is *flow*; a measurement of flux is a measurement of flow.
 
 Before tackling electric flux, let's assume we are working with air. Let's assume that air is traveling through a vent of area $A = 4 \, \text{m}^2$ at a velocity of $v = 10 \, \text{m/s}$. How can we calculate the flux in this scenario? Well, flux is nothing but flow so in reality we are trying to calculate the rate for the amount fo air which is flowing out of this vent. So we are trying to calculate the amount of air which flows out of this vent every second.
 
