--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -2,7 +2,6 @@
 sidebar_position: 2
 ---
 
-
 # 8.1 - Introduction to Electrical Charges
 
 ## 8.1.1 - Electrical Charge
@@ -23,11 +22,11 @@ When such materials (like the balloon) act like this, they are considered *elect
 
 - Like charges repel (ex: positive and positive); opposite charges attract (ex: positive and negative)
   - You most likely know this one!
-- Negative charges are posessed by electrons
-- Positive charges are posessed by protons
+- Negative charges are possessed by electrons
+- Positive charges are possessed by protons
 - Electrical charge is ALWAYS conserved
   - You will probably recognize that this is similar to most other laws of conservation in physics.
-  - In the balloon example, the *transfer* of charge is what makes it electrified. One object gains some negative charge while the other gains an equal amount of positive charge. Remember from mechanics: opposite and equal!
+  - In the balloon example, the *transfer* charge is what makes it electrified. One object gains some negative charge while the other gains an equal amount of positive charge. Remember from mechanics: opposite and equal!
 - Electrical charges are quantized
 
 :::
@@ -40,15 +39,15 @@ Positively charged objects are at a loss of electrons. Their net charge is posit
 
 Negatively charged objects are at a gain of extra electrons. Their charge is negative because there are fewer protons than there are electrons
 
-### Convervation of Electrical Charge
+### Conservation of Electrical Charge
 
 Electrical charge is never actually created. It is conserved through a transfer of electrons between charged objects. This transfer creates attraction.
 
-It is also important to note that *electrons move, but protons don't*. Let's say that you have two objects: one is positively charged (which we will call object P) and one is negatively charged (which we will call object N). Recall that an object's charge is determined by their electron and proton count. Object P has *less* electrons (-) than protons (+), so it has a *net-positive* charge. Object P has *more* electrons (-) than protons (+), so it has a *net-negative* charge. The attraction between these two oppositely charged objects occurs because Object N's electrons attract to Object P's net-positive charge. The electrons move, but the proton's don't.
+It is also important to note that *electrons move, but protons don't*. Let's say that you have two objects: one is positively charged (which we will call object P) and one is negatively charged (which we will call object N). Recall that an object's charge is determined by their electron and proton count. Object P has *less* electrons (-) than protons (+), so it has a *net-positive* charge. Object P has *more* electrons (-) than protons (+), so it has a *net-negative* charge. The attraction between these two oppositely charged objects occurs because Object N's electrons attract to Object P's net-positive charge. The electrons move, but the protons don't.
 
 ### Quantization of Charge
 
-In 1909, Rober Milikan performed the oil drop experiment. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric field. He found that charge is *quantized*, denoted by the variable $q$, and is always an integral multiple of an amount of charge $e$.
+In 1909, Rober Millikan performed the oil drop experiment. In this experiment, he carefully measured the electrical charge on tiny oil droplets suspended in an electric field. He found that charge is *quantized*, denoted by the variable $q$, and is always an integral multiple of an amount of charge $e$.
 
 :::note
 
@@ -96,7 +95,7 @@ A conductive metal object, which we will call Object M, starts with a neutral ch
 
 ![Step 2](8.1-Images/Induction-Step-2.svg)
 
-Object M is brought near another object. However, the second object, which we will call it Object C, is charged. Let's say that Object C has a negative charge.
+Object M is brought near another object. However, the second object, which we will call Object C, is charged. Let's say that Object C has a negative charge.
 
 <hr></hr>
 
@@ -116,7 +115,6 @@ When we attach a grounding wire to Object M, we are essentially connecting it to
 
 <hr></hr>
 
-<!-- <img src={step-6.svg} alt="Siamese cat" style={{width: 400}} /> -->
 ![Step 6](8.1-Images/Induction-Step-6.svg)
 
 After we ground Object M, some of the repelled electrons that have moved to the other side will end up escaping through the wire and entering Earth.
@@ -131,7 +129,7 @@ When you cut off the ground connection, Object M will have more protons than ele
 
 ![Step 8](8.1-Images/Induction-Step-8.svg)
 
-We can remove object C. Thus, we have used induction to charge positively charge Object M!
+We can remove object C. Thus, we have used induction to positively charge Object M!
 
 ## Useful Resources
 
