--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -151,7 +151,12 @@ A video covering integrals in the context of electric fields. It also covers som
 * [Crash Course video about electric fields](https://www.youtube.com/watch?v=mdulzEfQXDE)
 * [Khan Academy article about electricl fields](https://www.khanacademy.org/science/electrical-engineering/ee-electrostatics/ee-electric-force-and-electric-field/a/ee-electric-field)
 * [Explanation of the electric field equation](https://openstax.org/books/physics/pages/18-3-electric-field)
-<!-- TODO: add resources for 8.3.2 -->
+
+**8.3.2**
+
+* [Video about integrals and electric fields (same as the Suggested Content)](https://www.youtube.com/embed/mACpLjE_XKk?si=QiPkpF55vUB03UTB)
+* [Lecture about continuous charge distribution field calculations](https://www.youtube.com/watch?v=tRnycUSt2SA)
+* [Article about continuous distributions](https://phys.libretexts.org/Bookshelves/University_Physics/University_Physics_(OpenStax)/University_Physics_II_-_Thermodynamics_Electricity_and_Magnetism_(OpenStax)/05%3A_Electric_Charges_and_Fields/5.06%3A_Calculating_Electric_Fields_of_Charge_Distributions)
 
 ## Equations and Constants
 
