--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -30,11 +30,17 @@ Electric field lines are **not real**. While an electric field itself is real, t
 
 :::
 
-(TODO: sketch of positive and negative electric field lines)
+![Diagram of electric field lines pointing away from a positive charge and towards a negative one.](8.4-Images/Field-Lines-Pos-Neg-Lines.svg)
 
-As you can see, the idea of the electric field $\mathbf{E}$ facing away from a positively charged object, but toward a negatively charged one is still at play here. Below is what an electric field line diagram would look like for both a positively and negatively charged particle.
+As you can see, the idea of the electric field $\mathbf{E}$ facing away from a positively charged object, but toward a negatively charged one is still at play here.
 
-(TODO: sketch whats above)
+:::note[Suggested Content]
+
+Here is a useful video about drawing electric field lines.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AtbaYUYTawg?si=9Mo2w3xz5jgiye5F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+:::
 
 ## 8.4.2 - Analysis of Electric Fields in Dipoles
 
@@ -53,29 +59,28 @@ When drawing a diagram for a dipole:
 
 :::
 
-Below are different models of dipoles followed by their respective charge magnitudes and signs:
+Below is an example of a dipole:
 
-(TODO: Insert examples here)
+![Diagram of a dipole.](8.4-Images/Field-Lines-Dipole.svg)
 
-In summary, electric field lines are visual representations that help us explain the behavior of electric fields in relationship to positively and negative charged objects.
-
-:::note[Suggested Content]
-
-Here is a useful video about drawing electric field lines.
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/AtbaYUYTawg?si=9Mo2w3xz5jgiye5F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-:::
+In summary, electric field lines are visual representations that help us explain the behavior of electric fields in relationship to positively and negatively charged objects.
 
 ## Useful Resources
 
 **8.4.1**
 
--
+- [Article about what electric field lines are](https://www.physicsclassroom.com/class/estatics/lesson-4/electric-field-lines)
+- [Video about what electric field lines are](https://www.youtube.com/watch?v=zyUUwCFVFE8)
+- [Electric field line properties](https://www.turito.com/learn/physics/properties-of-electric-field-lines-grade-8)
+  - This article might be locked behind a Sign Up page. You could install a browser extension called "Behind The Overlay" to get around this.
+- [Field lines article](https://phys.libretexts.org/Bookshelves/Conceptual_Physics/Introduction_to_Physics_(Park)/04%3A_Unit_3-_Classical_Physics_-_Thermodynamics_Electricity_and_Magnetism_and_Light/09%3A_Electricity/9.05%3A_Electric_Field_Lines#:~:text=can%20never%20cross.-,Glossary,Electric%20Potential%20and%20Potential%20Energy)
+- [Video about drawing field lines (same as Suggested Content)](https://www.youtube.com/embed/AtbaYUYTawg?si=9Mo2w3xz5jgiye5F)
 
 **8.4.2**
 
--
+- [Video about electric fields from a dipole](https://www.youtube.com/watch?v=T6nWSRvJ4Y0)
+- [Dipoles video](https://www.youtube.com/watch?v=j2lHyYQ2PJo)
+- [Calculating the electric field of a dipole](https://byjus.com/physics/dipole-electric-field/)
 
 ## Equations and Constants
 
@@ -85,4 +90,3 @@ Here is a useful video about drawing electric field lines.
   - $\mathbf{N}$ = the number of lines
   - $\mathbf{q}$ = the charge
   - $\mathbf{C}$ = a constant
-
