--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -42,7 +42,7 @@ All we need to do is plug in our value for $\mathbf{a}$ into those equations:
 - $v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
 - $v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
 
-$q$ is the charge and $\mathbf{E}$ is the electric field. $m$ is mass of the charge (some textbooks write it as $m_{e}$. All other variables are the same but in terms of an charged particle. For example, the velocity is the velocity of the charged particle.
+$q$ is the charge and $\mathbf{E}$ is the electric field. $m$ is the mass of the charge (some textbooks write it as $m_{e}$. All other variables are the same but in terms of a charged particle. For example, the velocity is the velocity of the charged particle.
 
 :::
 
@@ -58,7 +58,6 @@ We know that, based on the work-kinetic energy theorem, $W = \Delta K$. We also 
 Just like the previous key equations, $q$ is the charge and $E$ is the electric field.
 
 :::
-
 
 Remember: **the force caused by an electric field is just another force**. **The laws of mechanics still apply** and can be used in electricity and magnetism. As an example, below is a walkthrough of a question regarding the motion of a charged particle.
 
@@ -94,8 +93,13 @@ This video contains the basics of some motion calculations which may be done und
 **8.5.1**
 
 - [Article about the motion of a charged particle in a field](https://phys.libretexts.org/Courses/Kettering_University/Electricity_and_Magnetism_with_Applications_to_Amateur_Radio_and_Wireless_Technology/02%3A_The_Electric_Field/2.08%3A_Motion_of_a_Charged_Particle_in_an_Electric_Field)
+- [Video about electric fields and motion (same as Suggested Content)](https://www.youtube.com/embed/J3b7pjp4f9c?si=-bvCtXpZ596sQt5u)
+- [Charged particle motion article](https://phys.libretexts.org/Bookshelves/University_Physics/Radically_Modern_Introductory_Physics_Text_II_(Raymond)/15%3A_Electromagnetic_Forces/15.03%3A_Charged_Particle_Motion)
+- [Article about electric fields and the movement of charge](https://www.physicsclassroom.com/class/circuits/Lesson-1/Electric-Field-and-the-Movement-of-Charge)
 
 ## Equations and Constants
+
+**Equations**
 
 - $\Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
 - $v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
@@ -108,6 +112,7 @@ This video contains the basics of some motion calculations which may be done und
 
 <br></br>
 
-- $q$ = the charge
-- $\mathbf{E}$ = the electric field
-- $m$ = the mass of the charge (sometimes listed as $m_{e}$)
+- For ALL equations listed above:
+  - $q$ = the charge
+  - $\mathbf{E}$ = the electric field
+  - $m$ = the mass of the charge (sometimes listed as $m_{e}$)
