--- a/docs/Unit-8/8.7-applications.md
+++ b/docs/Unit-8/8.7-applications.md
@@ -1,21 +1,19 @@
 ---
-sidebar_position: 7
+sidebar_position: 9
 ---
 
 # 8.7 - Applications of Gauss's Law
 
 ## 8.7.1 - Gauss's Law in Continuous Charge Distributions
 
-Essentially Gauss's Law can also be used to find electric fields inside high symmetry charge distributions. What this means is that the distributions of charges within an object is somewhat "even" in terms of placement through the medium. 
+Essentially Gauss's Law can also be used to find electric fields inside high symmetry charge distributions. What this means is that the distribution of charges within an object is somewhat "even" in terms of placement through the medium.
 
 For example, in a problem regarding electric flux through a spherically symmetric charge distribution, $\oint \mathbf{E} \cdot d\mathbf{A}$ is able to be represented in a more simpler form in which $\mathbf{E}$ is able to be taken out of the integral, making it $\mathbf{E} \oint d\mathbf{A}$ which evens out into a form which resembles the simple expression $\mathbf{EA}$ such that $\mathbf{A}$ is represented by the surface area of the sphere. Through this it reaches a form in which we are easily able to evaluate and find the electric flux through a continuous charge distribution.
 
 Below is a list of some other examples in which Gauss's law can help in evaluating their electric flux in a continuous high symmetry charge distribution.
 
-
 ## 8.7.2 - Gauss's Law Applied to Conductors in Electrostatic Equilibrium
 
-Earlier we covered conductors with respect to the important role they play in the transfer of electrons in different electronic systems. I basic terms, they help facilitate electron transfer through the presence of free electrons which are present in their respective medium. Electrostatic equilibrium is NOT when electrons through a conductor stop moving, but instead when the charges inside the conductor "cancel" such that no electric fiield is producted. Hence, electrons stop moving in a way which produced current. Current, $\mathbf{I}$, is the rate of change in charge with respect to time. It will play a more important role when we cover circuits. For now, just think of it as $\frac{dQ}{dt}$.
+Earlier we covered conductors with respect to the important role they play in the transfer of electrons in different electronic systems. In basic terms, they help facilitate electron transfer through the presence of free electrons which are present in their respective medium. Electrostatic equilibrium is NOT when electrons through a conductor stop moving, but instead when the charges inside the conductor "cancel" such that no electric field is produced. Hence, electrons stop moving in a way which produces current. Current, $\mathbf{I}$, is the rate of change in charge with respect to time. It will play a more important role when we cover circuits. For now, just think of it as $\frac{dQ}{dt}$.
 
 ## 8.7.3 - The Formal Derivation of Gauss's Law
-
