--- a/docs/Unit-8/8.7-applications.md
+++ b/docs/Unit-8/8.7-applications.md
@@ -8,14 +8,44 @@ sidebar_position: 7
 
 Essentially Gauss's Law can also be used to find electric fields inside high symmetry charge distributions. What this means is that the distributions of charges within an object is somewhat "even" in terms of placement through the medium. 
 
-For example, in a problem regarding electric flux through a spherically symmetric charge distribution, $\oint \mathbf{E} \cdot d\mathbf{A}$ is able to be represented in a more simpler form in which $\mathbf{E}$ is able to be taken out of the integral, making it $\mathbf{E} \oint d\mathbf{A}$ which evens out into a form which resembles the simple expression $\mathbf{EA}$ such that $\mathbf{A}$ is represented by the surface area of the sphere. Through this it reaches a form in which we are easily able to evaluate and find the electric flux through a continuous charge distribution.
+For example, in a problem regarding electric flux through a spherically symmetric charge distribution, $\oint \mathbf{E} \cdot d\mathbf{A}$ is able to be represented in a more simpler form in which $\mathbf{E}$ is able to be taken out of the integral, making it $\mathbf{E} \oint d\mathbf{A}$ which evens out into a form which resembles the simple expression $\mathbf{EA}$ such that $\mathbf{A}$ is represented by the surface area of the sphere. Through this it reaches a form in which we are easily able to evaluate and find the electric flux through a continuous charge distribution. Using similar approaches to this, we will cover how to find the electric field of complex charged objects using Gauss's Law
 
-Below is a list of some other examples in which Gauss's law can help in evaluating their electric flux in a continuous high symmetry charge distribution.
-
+The main idea is that for any continuously charged high symmetry object, the equation $\Phi_E = EA_{\perp}$ is true, but Gauss's Law still applies. Using this, and the surface area of the object, we can solve for the electric field. 
 
 ## 8.7.2 - Gauss's Law Applied to Conductors in Electrostatic Equilibrium
 
 Earlier we covered conductors with respect to the important role they play in the transfer of electrons in different electronic systems. I basic terms, they help facilitate electron transfer through the presence of free electrons which are present in their respective medium. Electrostatic equilibrium is NOT when electrons through a conductor stop moving, but instead when the charges inside the conductor "cancel" such that no electric fiield is producted. Hence, electrons stop moving in a way which produced current. Current, $\mathbf{I}$, is the rate of change in charge with respect to time. It will play a more important role when we cover circuits. For now, just think of it as $\frac{dQ}{dt}$.
 
+One interesting application of Gauss's law is that we can use it to find the electric field of a conductor in electrostatic equilibrium. There is a separation between the way we calculate the electric field inside and outside of a conductor in electrostatic equilibrium because of a discontinuous jump between the two. Below is the setup for them in a spherical conductor in electrostatic equilibrium.
+
+In:
+The electric field for a point inside the radius of this sphere will be 0
+
+Out:
+$\oint \mathbf{E} \cdot d\mathbf{A} = \frac{Q_{\text{enc}}}{\varepsilon_0}$
+
+$\mathbf{E} \cdot 4 \pi r^2 = \frac{Q}{\varepsilon_0}$
+
+$\mathbf{E}(r) = \frac{Q}{4 \pi \varepsilon_0 r^2} \,\hat{\mathbf{r}}, \quad r \ge R$
+
+$\mathbf{E}_{\text{surface}} = \frac{Q}{4 \pi \varepsilon_0 R^2} \,\hat{\mathbf{r}} = \frac{\sigma}{\varepsilon_0} \,\hat{\mathbf{r}}, \quad \sigma = \frac{Q}{4 \pi R^2}$
+
 ## 8.7.3 - The Formal Derivation of Gauss's Law
 
+$\Delta \Phi_E = \mathbf{E} \cdot \Delta \mathbf{A} = E \, \Delta A \cos\theta$
+
+$E = k_e \frac{q}{r^2}$
+
+$\Delta \Phi_E = k_e \frac{q}{r^2} \, \Delta A \cos\theta$
+
+$\Delta \Omega = \frac{\Delta A \cos\theta}{r^2}$
+
+$\Delta \Phi_E = k_e q \, \Delta \Omega$
+
+$\Phi_E = \sum \Delta \Phi_E = k_e q \sum \Delta \Omega$
+
+$\sum \Delta \Omega = 4\pi$
+
+$\Phi_E = 4 \pi k_e q = \frac{q}{\varepsilon_0}$
+
+$\oint \mathbf{E} \cdot d\mathbf{A} = \frac{q_{\text{enc}}}{\varepsilon_0}$
