firction charging added + charge review

--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -21,15 +21,17 @@ When such materials (like the balloon) act like this, they are considered *elect
 :::tip[Key Concepts]
 
 - Like charges repel (ex: positive and positive); opposite charges attract (ex: positive and negative)
-  - You most likely know this one!
+- You most likely know this one!
 - Negative charges are possessed by electrons
 - Positive charges are possessed by protons
 - Electrical charge is ALWAYS conserved
-  - You will probably recognize that this is similar to most other laws of conservation in physics.
-  - In the balloon example, the *transfer* charge is what makes it electrified. One object gains some negative charge while the other gains an equal amount of positive charge. Remember from mechanics: opposite and equal!
+- You will probably recognize that this is similar to most other laws of conservation in physics.
+- In the balloon example, the *transfer* charge is what makes it electrified. One object gains some negative charge while the other gains an equal amount of positive charge. Remember from mechanics: opposite and equal!
 - Electrical charges are quantized
 
 :::
+
+Don't worry if this doesn't make sense right now. We will go over everything in detail below:
 
 ### Negative and Positive Charges
 
@@ -41,9 +43,11 @@ Negatively charged objects are at a gain of extra electrons. Their charge is neg
 
 ### Conservation of Electrical Charge
 
-Electrical charge is never actually created. It is conserved through a transfer of electrons between charged objects. This transfer creates attraction.
+Electrical charge within a *closed system* isn't created or destroyed. The total net electrical charge will always remain the same, even if the charges move around. The conservation of electrical charge is just like other conservation laws. For example, the conservation of energy, which you learned in mechanics, states that the total net energy in a system remains the same. Energy could be transferred (ex: from potential to kinetic), but there is never any loss or gain. The only exception to this would be external forces like friction. However, the closed system becomes an *open system*. That is why a loss occurs
 
-It is also important to note that *electrons move, but protons don't*. Let's say that you have two objects: one is positively charged (which we will call object P) and one is negatively charged (which we will call object N). Recall that an object's charge is determined by their electron and proton count. Object P has *less* electrons (-) than protons (+), so it has a *net-positive* charge. Object P has *more* electrons (-) than protons (+), so it has a *net-negative* charge. The attraction between these two oppositely charged objects occurs because Object N's electrons attract to Object P's net-positive charge. The electrons move, but the protons don't.
+It is also important to note that **electrons move, but protons don't**. That is because the protons are bound extremely tightly to the nucleus, so they are unable to escape. Electrons, however, can float around freely and move.
+
+Let's say that you have two objects: one is positively charged (which we will call object P) and one is negatively charged (which we will call object N). Recall that an object's charge is determined by their electron and proton count. Object P has *less* electrons (-) than protons (+), so it has a *net-positive* charge. Object P has *more* electrons (-) than protons (+), so it has a *net-negative* charge. The attraction between these two oppositely charged objects occurs because Object N's electrons attract to Object P's net-positive charge.
 
 ### Quantization of Charge
 
@@ -73,13 +77,61 @@ The idea became that:
 
 :::
 
-## 8.1.2 Charging Objects by Induction
+### Ground
+
+When we attach a grounding wire to an object, we are essentially connecting it to a reservoir, like Earth, that can accept and provide electrons freely with negligible effects. Think of a grounding wire like a pipe to the ocean. Because the ocean is massive, any water that we add or remove won't have a noticeable effect on the ocean's overall water amount. Similarly, any electrons which are accepted or provided to Earth (ground) won't affect Earth's overall charge.
+
+Attaching a system to ground allows charges to freely flow in and out of it to reach electrostatic equilibrium. However, this doesn't necessarily mean it will become a neutral charge.
+
+## 8.1.2 Charging Objects
 
 ### Conductors and Insulators
 
 - **Conductors** (e.g. Copper) are materials in which some electrons are free and can move throughout the material.
 - **Insulators** (e.g. Wood) are materials in which all electrons are bound to the atoms and can't move freely at all.
 - **Semiconductors** (e.g. Silicon) have properties similar to both conductors and insulators.
+
+### Charging Objects by Friction
+
+Using friction, you can "brush" electrons onto another object. In the video below, you can see how electrons are being transferred between the two objects. However, keep in mind that the **net charge of the system did not change.** This follows the principles of the conservation of energy. Even though we *transferred* charge, we didn't add or remove it.
+
+![Gif of charging with friction](8.1-Images/Friction.gif)
+
+### Charging Objects by Conduction
+
+Another way to charge objects is by transferring charge from one item to another to reach equilibrium.
+
+:::note
+
+In reality, when two electrical objects undergo charging by conduction, they are actually trying to reach the same electrical potential. We won't go over electrical potential right now though, so we will simply say they are trying to reach equilibrium.
+
+This difference is important because one must remember that objects are **not always trying to equalize their charges.** For example, a large object and small object with different charges aren't going to automatically equalize; they will still have different charges. For our demonstration, we can assume both objects are the same size and same conducting material.
+
+:::
+
+<hr></hr>
+
+We start with two metal objects. One has no net charge and one has a positive charge of 2.
+
+![Step 1](8.1-Images/Conduction-Step-1.svg)
+
+<hr></hr>
+
+We connect both objects with a conductive wire.
+
+![Step 2](8.1-Images/Conduction-Step-2.svg)
+
+<hr></hr>
+
+In order to achieve equilibrium, an electron will travel to the object on the right.
+
+![Step 3](8.1-Images/Conduction-Step-3.svg)
+
+<hr></hr>
+
+After the process, both objects have a charge of 1.
+
+![Step 4](8.1-Images/Conduction-Step-4.svg)
 
 ### Charging Objects by Induction
 
@@ -111,8 +163,6 @@ Now, the part of Object M that was closest to Object C will have an overall posi
 
 The wire connected to the three bars is the symbol for ground.
 
-When we attach a grounding wire to Object M, we are essentially connecting it to a reservoir, like Earth, which can accept and provide electrons freely with negligible effects. Think of a grounding wire like a pipe to the ocean. Because the ocean is massive, any water that we add or remove won't have a noticeable effect on the ocean's overall water amount. Similarly, any electrons which are accepted or provided to Earth (ground) won't affect Earth's overall charge.
-
 <hr></hr>
 
 ![Step 6](8.1-Images/Induction-Step-6.svg)
@@ -137,5 +187,12 @@ We can remove object C. Thus, we have used induction to positively charge Object
 
 - [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
 - [Professor Dave Explains video on charge](https://www.youtube.com/watch?v=VFbyDCG_j18)
-  - The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
+- The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
 - [Crash Course video about charge](https://www.youtube.com/watch?v=TFlVWf8JX4A)
+
+**8.1.2**
+
+- [Charging via conduction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Conduction)
+- [Charging via friction (also called triboelectric charging)](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Friction)
+- [Charging by induction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Induction)
+- [Charging by induction video](https://www.youtube.com/watch?v=ZbBHnod_Mew)
