--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -181,6 +181,24 @@ When you cut off the ground connection, Object M will have more protons than ele
 
 We can remove object C. Thus, we have used induction to positively charge Object M!
 
+## 8.1.3 Polarization
+
+Let's say that you rub a balloon against your hair. You probably know that when you lift the balloon, your hair will lift up too. We know this because the balloon has been negatively charged via friction while the hair has been positively charged. This creates an attractive force, so the hair is pulled up.
+
+However, what happens when we put the balloon near some small pieces of paper? The papers jump up and stick to the balloon! But how could this be? The paper was never charged to begin with, and it started off neutral. The answer: polarization.
+
+Remember how the process of charging an object with induction worked? When we brought the square object (net negative charge) near the circular one (net neutral), the electrons *within the circle* moved away from the square. This resulted in one side having a more negative charge and one side having a more positive charge. Remember, the **overall net charge remained the same.** All that changes was the charge level on each *side* of the object.
+
+Similarly, when we hold the negatively charged balloon to the neutral paper, the negative charges within the paper's atoms will move *away* from the balloon because they are repelled, and the positive charges will move *closer* to the balloon because they are attracted. This results in the paper atoms having one side that is more negative and one side that is more positive. That is called **polarization.** When the paper is polarized, it will stick to the balloon because the positive charge wants to touch the negative balloon.
+
+:::note
+
+The force of electrical attraction is similar to gravity, becoming stronger when the distance between two charged objects is shorter. That is why the paper sticks to the balloon: the forces of attraction between the positive charges of the paper atoms and the negative charges of the balloon are stronger.
+
+If that didn't make sense, don't worry! What we just talked about is a little out of our scope for this lesson. It will be covered in detail in later lessons.
+
+:::
+
 ## Useful Resources
 
 **8.1.1**
