--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -214,3 +214,8 @@ If that didn't make sense, don't worry! What we just talked about is a little ou
 - [Charging via friction (also called triboelectric charging)](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Friction)
 - [Charging by induction](https://www.physicsclassroom.com/class/estatics/Lesson-2/Charging-by-Induction)
 - [Charging by induction video](https://www.youtube.com/watch?v=ZbBHnod_Mew)
+
+
+**8.1.3**
+
+- [Video about how electrostatic forces and polarization work](https://www.khanacademy.org/science/highschool-physics/x6679aa2c65c01e53:electrostatics/x6679aa2c65c01e53:static-electricity/v/static_electricity)
