--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -25,7 +25,7 @@ This equation says that the electric field from the source charge at the locatio
 
 :::
 
-:::danger[Warning]
+:::warning
 
 The equation above only works for particles, or an object of zero size. For objects that have a defined size, things can get significantly more complicated and will often involve calculus or more complex math.
 :::
