--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -24,7 +24,7 @@ In an electric field line diagram:
 
 :::
 
-:::danger[Warning]
+:::warning
 
 Electric field lines are **not real**. While an electric field itself is real, the lines in the pictures aren’t. The reason for this is because in electric field line models (these are the diagrams of charged particles), there are only a finite amount of lines. This makes it look like the field only exists where those specific lines are. In reality, an electric field is a continuous vector, so the field exists at every point in space around the charge. In other words, at any point around a charged particle, an electric field exists. Therefore, the field would have infinite lines (but obviously, you wouldn’t be able to draw that!).
 
