--- a/docs/Unit-9/9.1-potential.md
+++ b/docs/Unit-9/9.1-potential.md
@@ -10,7 +10,7 @@ From earlier units, we learned that the force of the attraction between two char
 
 Similarly, there is a potential energy when working with objects under the influence of an electric field. In mechanics, the derivation for net work was equal to $\mathbf{\int_a^b F dx}$, which is also equivalent to the change in kinetic energy $\mathbf{\Delta K}$, or the negative change in potential energy $\mathbf{-\Delta U}$. With this logic, we would assume that the potential energy could just be written as $\mathbf{-\Delta U = \int_a^b F dx}$. This is CLOSE, but still INCORRECT.
 
-:::danger[Warning]
+:::warning
 
 $\mathbf{-\Delta U = \int_a^b F dx}$ is NOT a valid equation for potential energy under the influence of an electric field.
 :::
@@ -29,7 +29,7 @@ $\mathbf{s}$ marks the infinitesmal lines which make the path
 
 :::
 
-If you divide the potential energy by the test charge, you get a value which depends on the source charge distribution. This value is called electric potential and only depends on the source charge distribution and has a value at every point of an electric field. The equation $\mathbf{V = \frac{\mathbf{\Delta U}}{q_{0}}}$ represents this concept. The change in electric potential is called potential difference and is represented by $\mathbf{\Delta V}$, which is $\mathbf{V_{b} - V_{a}}$. Through this, the eqution of the potential difference becomes $\mathbf{\Delta V = \frac{\mathbf{-q_{0}\int_a^b E ds}{q_{0}}}}$ or $\mathbf{\Delta V = \\int_a^b E ds}$
+If you divide the potential energy by the test charge, you get a value which depends on the source charge distribution. This value is called electric potential and only depends on the source charge distribution and has a value at every point of an electric field. The equation $\mathbf{V = \frac{\mathbf{\Delta U}}{q_{0}}}$ represents this concept. The change in electric potential is called potential difference and is represented by $\mathbf{\Delta V}$, which is $\mathbf{V_{b} - V_{a}}$. Through this, the eqution of the potential difference becomes $\mathbf{\Delta V = \frac{-q_{0} \int_a^b E \, ds}{q_{0}}}$ or $\mathbf{\Delta V = -\int_a^b E ds}$
 
 ## 9.1.2 - Potential Differences in a Uniform Electric Field
 
