quiz testing features

--- a/docs/Unit-8/8.1-charges.mdx
+++ b/docs/Unit-8/8.1-charges.mdx
@@ -2,6 +2,19 @@
 sidebar_position: 2
 ---
 
+import Quiz from '@site/src/components/Quiz';
+
+<Quiz
+  question="Which of these is an example of Newton's First Law?"
+  options={[
+    "A ball rolling until friction stops it",
+    "A rocket accelerating into space",
+    "A car engine producing thrust",
+    "The gravitational pull of the Earth"
+  ]}
+  answer={0}
+/>
+
 # 8.1 - Introduction to Electrical Charges
 
 ## 8.1.1 - Electrical Charge
