goofin around with quiz functinality

--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -5,14 +5,10 @@ sidebar_position: 2
 import Quiz from '@site/src/components/Quiz';
 
 <Quiz
-  question="Which of these is an example of Newton's First Law?"
-  options={[
-    "A ball rolling until friction stops it",
-    "A rocket accelerating into space",
-    "A car engine producing thrust",
-    "The gravitational pull of the Earth"
-  ]}
-  answer={0}
+  question="A force of 10 N is applied over 5 m. How much work is done?"
+  options={["15 J", "50 J", "5 J", "100 J"]}
+  answer={1}
+  maxTries={2}
 />
 
 # 8.1 - Introduction to Electrical Charges
